fix(homeChart): subtitle layout on mobile
when wrapping its lineheight was too large, and it could wrap earlier to be more balanced (more right padding)

--- a/site/src/components/HomeDailyChart/HomeDailyChart.styles.module.css
+++ b/site/src/components/HomeDailyChart/HomeDailyChart.styles.module.css
@@ -56,7 +56,10 @@
 .chartSubtitle {
   color: var(--tfp-chart-subtitle);
   padding-left: 4px;
+  padding-top: 4px;
+  padding-right: 20px;
   margin-bottom: 30px;
+  line-height: 1.3em;
 }
 
 .chartContainer svg {
